<resources>
    <string name="app_name">Candy Dispenser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
    <string name="isEmpty">isEmpty</string>
    <string name="top">Top</string>
    <string name="push">Push</string>
    <string name="pop">Pop</string>
    <string name="dialogTitle">Add a candy!</string>
    <string name="sweet_hint">Candy name</string>
    <string name="add">Add</string>
    <string name="no">Cancel</string>
    <string name="error">Must not be empty!</string>
    <string name="pop_err">Oops! Seems like you are out of candies</string>
    <string name="pop_errTitle">Pop error</string>
    <string name="ok">Ok</string>
    <string name="top_err">No candies available!</string>
    <string name="top_errTitle">Top error</string>
</resources>