<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_view"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <include
           layout="@layout/toolbar_main"
           android:id="@+id/toolbar" />
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal">
           <ImageView
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:id="@+id/spring_height"
               android:layout_marginTop="16dp"
               android:src="@drawable/spring2"/>
           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:scrollbars="vertical"
               android:id="@+id/sweet_recyclerview"
               android:background="@color/white"
               android:layout_gravity="center_horizontal"/>

       </RelativeLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp"
           android:padding="10dp"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginBottom="30dp">
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="40dp"
                   android:id="@+id/push"
                   app:rippleColor="@color/white"
                   android:text="@string/push"/>
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="35dp"
                   android:id="@+id/pop"
                   app:rippleColor="@color/white"
                   android:text="@string/pop"/>
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/top"
                   app:rippleColor="@color/white"
                   android:text="@string/top"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/isEmpty"
                   android:layout_marginRight="160dp"
                   app:rippleColor="@color/white"
                   android:text="@string/isEmpty"/>
               <com.google.android.material.button.MaterialButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/size"
                   app:rippleColor="@color/white"
                   android:text="@string/size"/>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>
</ScrollView>